--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@
 p {
     margin: 0;
 }
+ 
 
 body {
     font-family: var(--main-font);
@@ -138,7 +139,7 @@ body {
     content: '';
     width: 0;
     height: 4px;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     border-radius: 2px;
     background-color: var(--accent-color);
@@ -392,6 +393,10 @@ body {
    padding: 27px 0;
    
    background-color: rgba(47, 48, 58, 0.8);
+   
+}
+ 
+.about-title-second {
    font-weight: 700;
    font-size: 14px;
    line-height: 1.14;
@@ -399,6 +404,7 @@ body {
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: var(--main-light-color);
+   margin: 0;
 }
 
 /* ================= /ABOUT ================= */
@@ -522,7 +528,7 @@ body {
     border: 1px solid var(--icon-color);
     border-radius: 4px;
     color: var(--icon-color);
-    text-align: center;
+    padding: 16px 32px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -536,15 +542,18 @@ body {
 
 .customer-link-icon {
     fill: currentColor;
-    margin-top: 16px;
 }
 
 /* ================= /CUSTOMERS ================= */
 
 /* ================= FOOTER ================= */
 
-.contact-info-list {
+.footer {
+    padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.contact-info-list {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -565,7 +574,6 @@ body {
 }
 
 .logo-footer {
-    padding-top: 60px;
     display: block;
 }
 
@@ -620,7 +628,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-light-color);
-    margin-top: 72px;
+    margin-top: 12px;
     margin-bottom: 0;
 }
  
@@ -673,10 +681,17 @@ body {
 }
 
 .portfolio-list-item {
-    margin-right: 27px;
-    margin-bottom: 29px;
-    border: 1px solid var(--border-bottom-portfolio-color);
+    margin-right: 30px;
+    margin-bottom: 30px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-bottom {
+    padding: 20px 24px;
+    border-bottom: 1px solid var(--border-bottom-portfolio-color);
+    border-left: 1px solid var(--border-bottom-portfolio-color);
+    border-right: 1px solid var(--border-bottom-portfolio-color);
+
 }
 
 .portfolio-list-item:hover,
@@ -728,23 +743,20 @@ body {
 }
 
 .portfolio-list-name {
-    margin-top: 20px;
+    margin: 0;
     margin-bottom: 4px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    margin-left: 24px;
 }
 
 .portfolio-list-class {
     margin-top: 0;
-    margin-bottom: 20px;
     font-size: 16px;
     line-height: 1.8;
     letter-spacing: 0.03em;
     color: var(--second-color);
-    margin-left: 24px;
 }
   
 .img-overlay {
